Centered hero button text, fixed hero button text location issue on mobile

--- a/index.css
+++ b/index.css
@@ -95,7 +95,9 @@ nav img {
 }
 
 .hero-btn {
-    display: inline-block;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     text-decoration: none;
     color: #fff;
     border: 1px solid #fff;
